--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,22 +4,20 @@ driver:
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
+  client_rb:
+    chef_license: accept
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7
+  - name: ubuntu-18.04
 
 suites:
   - name: default
     run_list:
-      - recipe[ruby_on_rails_with_passenger_dev_environment::default]
+      - recipe[ruby_on_rails_dev_environment::default]
     verifier:
       inspec_tests:
         - test/integration/default
